sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: not found: value PlusPetit
			if (PlusPetit(j,j+1)==false){
                            ^